--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,9 +7,11 @@
         "id": "61caf3bada259878",
         "type": "leaf",
         "state": {
-          "type": "image",
+          "type": "markdown",
           "state": {
-            "file": "Pasted image 20220527104349.png"
+            "file": "Autopsy report/Frontend display mismatch field.md",
+            "mode": "source",
+            "source": false
           }
         }
       }
@@ -51,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 479
   },
   "right": {
     "id": "841363b83b926a2a",
@@ -67,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Pasted image 20220527104349.png",
+                "file": "Autopsy report/Frontend display mismatch field.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,7 +89,8 @@
   },
   "active": "61caf3bada259878",
   "lastOpenFiles": [
-    "Pasted image 20220527104349.png",
-    "nodejs event loop.md"
+    "Autopsy report/Frontend display mismatch field.md",
+    "JS runtime/Pasted image 20220527104349.png",
+    "JS runtime/nodejs event loop.md"
   ]
 }
