--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -11,7 +11,7 @@
           "state": {
             "file": "Autopsy report/Frontend display mismatch field.md",
             "mode": "source",
-            "source": false
+            "source": true
           }
         }
       }
