--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "FP/Ramda 鲜为人知的一面.md",
+            "file": "FP/实现TypeScript运行时类型检查.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "FP/Ramda 鲜为人知的一面.md",
+                "file": "FP/实现TypeScript运行时类型检查.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,9 +89,11 @@
   },
   "active": "2074ccff8203f767",
   "lastOpenFiles": [
-    "FP/Ramda 鲜为人知的一面.md",
+    "FP/实现TypeScript运行时类型检查.md",
+    "JS runtime/Chrome process architecture.md",
     "Autopsy report/Frontend display mismatch field.md",
-    "JS runtime/Pasted image 20220527104349.png",
-    "JS runtime/nodejs event loop.md"
+    "FP/Ramda 鲜为人知的一面.md",
+    "JS runtime/nodejs event loop.md",
+    "JS runtime/Pasted image 20220527104349.png"
   ]
 }
