--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,12 @@
 {
   "legacyEditor": false,
   "livePreview": true,
-  "promptDelete": false
+  "promptDelete": false,
+  "spellcheckDictionary": [
+    "rerender",
+    "rerender",
+    "rerender",
+    "rerender",
+    "Rerender"
+  ]
 }
