--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,5 @@
 {
-  "theme": "moonstone",
+  "theme": "system",
   "cssTheme": "Minimal",
   "interfaceFontFamily": "JetBrains Mono",
   "textFontFamily": "JetBrains Mono",
