--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,12 +7,8 @@
         "id": "8e5f9391d7e490d8",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "FP/实现TypeScript运行时类型检查.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -69,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "FP/实现TypeScript运行时类型检查.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,9 +84,10 @@
   },
   "active": "8e5f9391d7e490d8",
   "lastOpenFiles": [
+    "react-location/React Location.md",
+    "Pasted image 20220609192221.png",
     "FP/实现TypeScript运行时类型检查.md",
     "FP/Ramda 鲜为人知的一面.md",
-    "react-location/React Location.md",
     "JavaScript runtime/Chrome process architecture.md",
     "Autopsy report/Frontend display mismatch field.md",
     "JavaScript runtime/nodejs event loop.md",
